--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,8 +2,4 @@
   {{headerTitle}}
 </p>
 
-<input [(ngModel)]="data.name">
-<input [(ngModel)]="data.status">
-
-<p>{{data.name}}</p>
-<p>{{data.status}}</p>
+<button (click)="fireTestEvent($event)">hit me</button>
