custom property binding @input

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,14 @@
   {{headerTitle}}
 </p>
 
-<input [(ngModel)]="data.name">
-
-<p>{{data.name}}</p>
-<p>{{data.status}}</p>
+<ul>
+  <li>
+    <a href="#">{{test.name}}</a>
+  </li>
+  <li>
+    <a href="#">{{test.status}}</a>
+  </li>
+  <li>
+    <a href="#">{{test.age}}</a>
+  </li>
+</ul>
