--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-header></app-header>
+<a routerLink="/header">Header</a>
+<a routerLink="/content">Content</a>
+<router-outlet></router-outlet>
 <h1>
   {{title}}
 </h1>
