--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
 <ul>
   <li *ngFor='let list of listing'>
     <a href="#">
-      {{list.name}} - {{list.age}}
+      {{list.name | uppercase}} - {{list.age}}
     </a>
     <span [ngStyle]='{background: list.belt}'>{{list.belt}}</span>
   </li>
